add listings from api, cleanup and refactor code
